= Asciimath Changelog

== 2.0.2

Bug fixes::

  * Issue #50: fix parsing error when unary and binary operators are missing an operand

== 2.0.1

Enhancements::

  * Issue #40: add `ker` as standard symbol (@GarkGarcia)
  * Issue #46: allow customisation of the parsing and rendering symbol tables (@GarkGarcia)

Bug fixes::

  * Issue #48: fix parsing of single column matrices (@ronaldtse)

== 2.0.0

Enhancements::

  * The AsciiMath parser has been significantly improved and should now have reached feature parity with the original Javascript implementation.
  * Issue #16: add initial LaTeX output support (@GarkGarcia)
  * Issue #26: avoid generating `<mfenced>` tags in MathML output

Bug fixes::

  * Issue #14: add support for additional symbols and functions that are supported by Asciimath JS

== 1.0.9

Bug fixes::

  * Issue #13: Improve matrix parsing
  * Output `mfenced` tags instead of `mo` pairs to improve MathML compatbility with Microsoft Office (@opoudjis)

== 1.0.8

Bug fixes::

  * Issue #9 and #10: Resolve compatibility issues with TruffleRuby

== 1.0.7

Bug fixes::

  * Issue #6: Mark standard functions as identifiers instead of operators
  * Issue #7: Correct parsing of TeX altenative style (`text()`) text strings

== 1.0.6

Bug fixes::

  * Resolve 'undefined variable' error when parsing empty `paren` expressions (@tuttieee)

== 1.0.5

Enhancements::

  * Add experimental HTML output (@Tobski)

== 1.0.4

Enhancements::

  * Add support for AsciiMath font commands

== 1.0.3

Bug Fixes::

  * Issue #2: Correctly parse input strings containing multi-byte characters.

== 1.0.2

  Bug Fixes::

  * Issue #1: Resolve uninitialized instance variable warning

== 1.0.1

Enhancements::

  * Make AsciiMath compatible with Ruby 1.8

== 1.0.0

Initial release::

  * An AsciiMath parser and MathML converter written in Ruby