@@ -2,6 +2,10 @@
 
 == 2.0.2
 
+Enhancements::
+
+  * Issue #51: generate `accent` and `accentunder` attributes on `munder`, `mover`, and `munderover` tags when appropriate
+
 Bug fixes::
 
   * Issue #50: fix parsing error when unary and binary operators are missing an operand
